[package]
name = "humantime"
description = """
    A human friendly format parser for std::time::Duration.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["time", "human", "human-friendly", "parser", "duration"]
homepage = "https://github.com/tailhook/humantime"
documentation = "https://docs.rs/humantime"
version = "1.1.0-beta.3"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.0.0"

[lib]
name = "humantime"
path = "src/lib.rs"

[dev-dependencies]
time = "0.1.39"
chrono = "0.4.0"
rand = "0.4.2"
