[package]
name = "cyborgtime"
description = """
    A parser and formatter for std::time::{Duration, SystemTime}
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["time", "cyborg", "cyborg-friendly", "parser", "duration"]
homepage = "https://github.com/cyborg-rs/cyborgtime"
repository = "https://github.com/cyborg-rs/cyborgtime"
documentation = "https://docs.rs/cyborgtime"
version = "2.1.0"
edition = "2018"
authors = ["Paul Colomiets <paul@colomiets.name>", "The Internet Cyborgs Collective"]
categories = ["date-and-time"]

[lib]
name = "cyborgtime"
path = "src/lib.rs"

[dev-dependencies]
time = "0.1"
chrono = "0.4"
rand = "0.6"
